--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -17,6 +17,38 @@
             .entry-meta span{
                 color: black;
             }
+            .up-toolbar{
+                padding: 0;
+                list-style: none;
+                font-size: 0;
+                margin: 50px auto 0;
+                width: 100%;
+                height: 50px;
+            }
+            .up-toolbar li{
+                display:inline-block;
+                margin-right:-1px;
+                line-height:20px;
+            }
+            .up-toolbar .website-name{
+                width: 20%;
+                color: black;
+                text-decoration: none;
+                text-align: left;
+                float: left;
+                font-size: 30px;
+            }
+            .up-toolbar .admin-btn{
+                width: 80%;
+                color: black;
+                text-decoration: none;
+                text-align: right;
+                float: right;
+                font-size: 30px;
+            }
+            .up-toolbar li a{
+                font-family:"Times New Roman",Georgia,Serif;
+            }
         </style>
         <!-- js -->
         <script src="{% static 'js/jquery-2.1.3.min.js' %}"></script>
@@ -29,9 +61,12 @@
         <div class="container">
             <header id="site-header">
                 <div class="row">
-                    <div class="logo">
-                        <h1><a href="/">{{ websiteName }}</a></h1>
-                    </div>
+                    <ul class="up-toolbar">
+                        <li  class="website-name">
+                            <a href="/">{{ websiteName }}</a>
+                        </li>
+                        <li class="admin-btn"><a href="/admin">控制台</a></li>
+                    </ul>
                 </div>
             </header>
         </div>
