--- a/templates/articles.html
+++ b/templates/articles.html
@@ -30,7 +30,7 @@
             <div class="row">
                 <div class="col-md-4 col-sm-5 col-xs-8">
                     <div class="logo">
-                        <h1><a href="/{{ from_user }}">{{ websiteName }}</a></h1>
+                        <h1><a href="/{{ website_owner_name }}">{{ websiteName }}</a></h1>
                     </div>
                 </div><!-- col-md-4 -->
             </div>
