--- a/templates/category.html
+++ b/templates/category.html
@@ -88,8 +88,8 @@
                                         <div class="entry-meta">
                                             <span class="post-category">{{ post.author.name}}</span>
                                             <span class="post-date">
-                                                <span class="create-time">{{ post.createTime }}</span>
-                                                <span class="modified-time">{{ post.modifiedTime }}</span>
+                                                <span class="create-time">撰写时间：{{ post.createTime }}</span>
+                                                <span class="modified-time">修改时间：{{ post.modifiedTime }}</span>
                                             </span>
                                             <span class="views-count">浏览量：{{ post.views }} </span>
                                         </div>
@@ -128,6 +128,7 @@
                             {% else %}
                                 <ul>
                                     {% for category in categories %}
+
                                             <li>
                                                 <a href="/categories/{{ category.id }}">{{ category.categoryName}}</a>
                                             </li>
