--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -25,30 +25,24 @@
                 display:inline-block;
                 margin-right:-1px;
                 line-height:20px;
-            }
-            .up-toolbar .website-name{
-                width: 20%;
                 color: black;
                 text-decoration: none;
                 text-align: left;
                 float: left;
+                font-size: 20px;
+            }
+            .up-toolbar .website-name{
+                width: 30%;
                 font-size: 30px;
             }
             .up-toolbar .modify-articles{
-                width: 50%;
-                color: black;
-                text-decoration: none;
-                text-align: left;
-                float: left;
-                font-size: 25px;
+                width: 20%;
+            }
+            .up-toolbar .modify-category{
+                width: 20%;
             }
             .up-toolbar .quit{
                 width: 20%;
-                color: black;
-                text-decoration: none;
-                text-align: right;
-                float: right;
-                font-size:20px;
             }
             .up-toolbar li a{
                 font-family:"Times New Roman",Georgia,Serif;
@@ -58,20 +52,26 @@
                 height: auto;
             }
             .posts{
-                width: 60%;
-                margin: 10px 10px 20% 20%;
+                width: 80%;
+                margin: 10px 10px 10% 10%;
+            }
+            .table-header{
+                font-size: 120%;
+            }
+            .table-post a{
+                font-weight: normal;
             }
             #title{
-                width: 40%;
+                width: 30%;
             }
             #author{
                 width: 10%;
             }
             #create-time{
-                width: 20%;
+                width: 25%;
             }
             #modified-time{
-                width: 20%;
+                width: 25%;
             }
             #delete-btn-space{
                 width: 10%;
@@ -94,6 +94,9 @@
                         </li>
                         <li class="modify-articles">
                             <a href="modifyArticles/new">撰写文章</a>
+                        </li>
+                        <li class="modify-category">
+                            <a href="modifyCategory">文章分类</a>
                         </li>
                         <li class="quit">
                             <a href="quit">退出登录</a>
